# claude-tools

./: .gitignore  README.md
mcp-servers/reference-reviewer/: abstract_fetcher.py  html_generator.py  html_template.py  manuscript_parser.py  pdf_processor.py  pyproject.toml  server.py  snippet_extractor.py  state_manager.py  verification.py
mcp-servers/uf_mcp_manuscript_search/: .gitignore  README.md  pyproject.toml
mcp-servers/uf_mcp_manuscript_search/src/uf_mcp_manuscript_search/: __init__.py  api.py  crossref.py  fulltext.py  plos.py  pubmed.py  server.py  springer.py  unpaywall.py
skills/alps-qc-vision-reviewer/: SKILL.md
skills/analysis-reporter/: SKILL.md
skills/docx-manuscript-writer/: SKILL.md  authors.yaml  citation-manager.py  docx-generator.py  domain-conventions.md  formatting.md  language-rules.md  markdown-to-json.py  mml2omml.py  template.docx
skills/docx-manuscript-writer/journals/: cephalalgia.yaml  iasp-2026.yaml  journal-of-pain.yaml  pain.yaml
skills/manuscript-citation-audit/: SKILL.md
skills/manuscript-citation-audit/scripts/: semanticcite_backend.py
skills/reference-viewer/: SKILL.md
skills/reference-viewer/docs/plans/: 2026-04-03-skill-mcp-merge-design.md
skills/reference-viewer/scripts/: abstract_fetcher.py  generate_reference_viewer.py  html_template.py  pdf_matcher.py  snippet_extractor.py  state_manager.py  verification.py
skills/session-monitor/: SKILL.md  hpg_session_watchdog.sh
