[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uf-mcp-manuscript-search"
version = "0.2.0"
description = "Academic literature MCP server — Elsevier/Scopus, PubMed, Springer Nature, CrossRef, PLOS, Unpaywall"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
uf-mcp-manuscript-search = "uf_mcp_manuscript_search.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uf_mcp_manuscript_search"]

[tool.ruff]
target-version = "py311"
line-length = 99
